--- a/src/App.css
+++ b/src/App.css
@@ -1,86 +1,70 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;700&display=swap');
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-size: 10px;
-  font-family: 'Rubik', sans-serif;
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Rubik', sans-serif;
+}
+
+html {
+    font-size: 62.5%;
 }
 
 body {
-  background-color: #F5F7F8;
-  min-height: 0;
+    min-height: 100vh;
+    font-size: 1.5rem;
 }
 
 #root {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+:root {
+    --primary-color: #EEEEEE;
+    --secondary-color: #3E3E3E;
+    --effect-color: #DC5F00;
+    --light-text-color: #f5f5f5;
+    --dark-text-color: #333333;
+    --bg-dark: #1D1D1D;
 }
 
 .container {
-  padding: 0 15%;
-}
-
-@media (max-width: 1199px) {
-  *{
-    font-size: 9px;
-  }
-  .container {
-    padding: 0 10%;
-  }
-}
-
-@media (max-width: 767px) {
-  *{
-    font-size: 8.3px;
-  }
-
-  .container {
-    padding: 0;
-  }
-}
-
-a, p, span {
-  font-size: 1.6rem;
-}
-
-.leads {
-  font-size: 3rem;
-  margin-bottom: 1.6rem;
-  color: #54595e;
-}
-
-h1 {
-  font-size: 3.4rem;
-}
-
-h2 {
-  font-size: 3rem;
-}
-
-h3 {
-  font-size: 2.4rem;
-}
-
-h4 {
-  font-size: 2rem;
-}
-
-h5 {
-  font-size: 1.8rem;
-}
-
-h6 {
-  font-size: 1.6rem;
+    padding: 0 15%;
 }
 
 a {
-  text-decoration: none;
+    text-decoration: none;
+    color: var(--light-text-color);
 }
 
 li{
-  list-style-type: none;
+    list-style-type: none;
 }
 
+.leads {
+    font-size: 3rem;
+    margin-bottom: 1.6rem;
+    color: #54595e;
+}
+
+@media (max-width: 1199px) {
+    html{
+        font-size: 56.25%;
+    }
+    .container {
+        padding: 0 10%;
+    }
+}
+
+@media (max-width: 767px) {
+    html{
+        font-size: 52%;
+    }
+
+    .container {
+        padding: 0 2%;
+    }
+}
