--- a/src/components/ContactPage.css
+++ b/src/components/ContactPage.css
@@ -2,7 +2,7 @@
     background-image: url(/public/Images/contact-img/contact-bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    border: .1rem solid #495E57 ;
+    border: .1rem solid var(--effect-color) ;
     border-radius: 8px;
     margin-top: 5.5svh;
     margin-bottom: 5svh;
@@ -28,7 +28,7 @@
     font-size: 6.5rem;
     margin-top: 10rem;
     margin-bottom: 2rem;
-    color: #F5F7F8;
+    color: var(--light-text-color);
 }
 
 .contact-main input[type=text],[type=email], .contact-main textarea {
@@ -36,11 +36,11 @@
     padding: 1.2rem;
     padding-left: 5rem;
     margin-bottom: 2rem;
-    border: .1rem solid #495E57;
+    border: .1rem solid var(--effect-color);
     border-radius: 1.2rem;
     display: block;
     font-size: 1.6rem;
-    outline-color: #495E57;
+    outline-color: var(--effect-color);
 }
 
 .contact-main textarea {
@@ -48,10 +48,10 @@
 }
 
 .contact-main input[type=submit] {
-    background-color: #495E57;
+    background-color: var(--effect-color);
+    border: .1rem solid var(--effect-color);
     color: #fff;
     padding: 2rem 4rem;
-    border: .1rem solid #495E57;
     border-radius: 1.2rem;
     margin-top: 2rem;
     cursor: pointer;
@@ -59,14 +59,15 @@
 }
 
 .contact-main input[type=submit]:hover {
-    color: #495E57;
-    background-color: #F4CE14;
+    color: var(--effect-color);
+    background-color: var(--primary-color);
+    border: .1rem solid var(--effect-color);
     transition: all .4s;
 }
 
 .contact-icon {
     position: absolute;
-    color: #495E57;
+    color: var(--effect-color);
     font-size: 2rem;
     padding: 1rem;
     min-width: 5rem;
@@ -89,10 +90,10 @@
     }
 
     .contact-main input[type=submit] {
-        background-color: #495E57;
+        background-color: var(--effect-color);
         color: #fff;
         padding: 2rem 4rem;
-        border: .1rem solid #495E57;
+        border: .1rem solid var(--effect-color);
         border-radius: 1.2rem;
         margin-top: 2rem;
         cursor: pointer;
