--- a/src/components/FeaturedRecipe.css
+++ b/src/components/FeaturedRecipe.css
@@ -1,19 +1,12 @@
-.featured-height {
-    width: 100%;
-    height: 50vh;
-    object-fit: cover;
-}
-
 .side-border {
     height: .4rem;
-    border: .2rem solid #F4CE14;
+    border: .2rem solid var(--effect-color);
 }
 
 #featured {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    gap: 3rem 2rem;
 }
  
 .featured-bg .leads {
@@ -29,25 +22,27 @@
 .featured-images {
     position: relative;
     transition: all .5s;
-    width: calc(25% - 2rem);
-    margin-bottom: 3rem;
+    height: 40rem;
 }
 
 .featured-images img {
     border-radius: .6rem;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .featured-images:hover {
-    opacity: .7;
+    opacity: .9;
     transform: scale(1.05, 1.063);
 }
 
 .featured-btn {
-    background-color: #F4CE14;
-    color: #fff;
+    background-color: var(--effect-color);
+    color: var(--light-text-color);
     font-size: 1.8rem;
-    padding: .4rem 2rem;
-    border: .1rem solid #F4CE14;
+    padding: .5rem 2.4rem;
+    border: none;
     border-radius: .6rem;
     position: absolute;
     bottom: -1.5rem;
@@ -68,7 +63,7 @@
 
 .h-line {
     width: 30%;
-    border: .19rem solid #F4CE14;
+    border: .19rem solid var(--effect-color);
 }
 
 .side-line-title .hi {
@@ -76,36 +71,3 @@
     font-size: 3rem;
 }
 
-@media (max-width: 1199px) {
-    .featured-height {
-        height: 40vh;
-    }
-
-    #featured .featured-images {  
-        width: calc(50% - 2rem);
-    }
-}
-
-@media (max-width: 991px) {
-    .featured-height {
-        height: 30vh;
-    }
-
-    #featured .featured-images {  
-        width: calc(50% - 2rem);
-    }
-}
-
-@media (max-width: 767px) {
-
-    #featured .featured-images {  
-        width: calc(100% - 1rem);
-    }
-
-    .featured-images:hover {
-        opacity: .7;
-        transform: scale(1);
-    }
-    
-
-}
