--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,202 +1,70 @@
 footer {
-    background-color: #495E57;
-    color: #F5F7F8;
     margin-top: auto;
 }
 
-footer a {
-    text-decoration: none;
-    font-size: 1.6rem;
-    color: #F5F7F8;
-}
-
-footer i {
-    font-size: 2rem;
-    color: #F5F7F8;
-}
-
-footer ul {
-    padding: 0;
-}
-
-footer .space {
-    padding: 1.6rem;
-}
-
-/* FOOTER BOTTOM */
-
-.footer-hr {
-    color: #191919;
-    background-color: #191919;
-    height: .2rem;
-    border: none;
-}
-
-.footer-rights {
+.footer-main {
     display: flex;
-    justify-content: space-between;
-    align-self: center;
-    margin-top: 1rem;
+    flex-direction: column;
+    justify-content: center;
+    background: var(--secondary-color);
+    padding: 4rem;
 }
 
-.footer-rights p {
-    color: #191919;
-    font-weight: bold;
-}
-
-.footer-rights .social-links a{
-   margin-left: 1.2rem;
-   color: #191919;
-}
-
-.footer-rights .social-links i {
-    color: #191919;
-    font-size: 2.4rem;
-}
-
-.social-links i.yt:hover {
-    color: #FF313D;
-    transition: all .5s;
-}
-
-.social-links i.tw:hover {
-    color: #34CBFF;
-    transition: all .5s;
-}
-
-.social-links i.face:hover {
-    color: #3B5894;
-    transition: all .5s;
-}
-
-.social-links i.ins:hover {
-    color: #E15396;
-    transition: all .5s;
-}
-
-/* FOOTER TOP */
-
-.footer-top {
+.footer-sections {
     display: flex;
-    margin-bottom: 3rem;
+    justify-content: space-evenly;
+    
 }
 
-/* FOOTER IMG */
-
-#footer-img {
-    display: flex;
-    width: 50%;
-    height: 32rem;
-}
-
-#footer-img img {
-    width: 40%;
-    height: auto;
-    object-fit: cover;
-    object-position: center;
-}
-
-#footer-img .subscribe {
-    background-color: #191919;
-    width: 60%;
-    padding: 5rem 2rem;
-    text-align: center;
-    border-top-right-radius: .4rem;
-    border-bottom-right-radius: .4rem;
-}
-
-#footer-img .subscribe input {
-    padding: .8rem 1rem;
-    width: 80%;
-    margin-top: 2rem;
-    border-radius: .5rem;
-    font-size: 1.6rem;
-    outline-color: #F4CE14;
-
-}
-
-#footer-img .subscribe button {
-    width: 50%;
-    padding: .6rem 1.2rem;
-    margin-top: 1.2rem;
-    border-radius: .5rem;
-    font-size: 1.6rem;
-    background-color: #F4CE14;
-}
-
-#footer-img .subscribe button:hover {
-    opacity: .8;
-    transition: all .5s;
-}
-
-/* FOOTER LINKS  */
-
-#footer-links {
-    width: 50%;
-    display: flex;
-}
-
-#footer-links div {
-    margin: 8rem auto;
-    width: 33%;
-    text-align: center;
-}
-
-#footer-links h3 a {
-    font-size: 2.2rem;
-    padding: .3rem 1.2rem;
-    text-align: center;
-    color: #191919;
-    border-bottom: 1px solid #191919;
+.footer-sections h3 a{
+    color: var(--bg-dark);
 }
 
 .footer-ul li {
-    margin: 1rem auto;
+    margin: 2rem 0;
 }
 
-.footer-ul li a {
+.social-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    padding: 3rem 0;
+}
+
+.social-links i {
     font-size: 1.6rem;
 }
 
-.footer-ul li a:hover {
-    color: #F4CE14;
-    transition: .5s;
+.social-links a {
+    padding: 1.5rem;
+    border-radius: 99rem;
+    background-color: var(--bg-dark);
+    transition: all .4s;
 }
 
+.social-links a:hover {
+    background-color: var(--light-text-color);
+    color: var(--bg-dark);
+}
 
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 8rem;
+    background: var(--bg-dark);
+    color: var(--light-text-color);
+}
 
-@media (max-width: 1199px) {
-    .footer-top {
-        flex-direction: column;
-        align-items: center;
-        margin: 0;
-    }
-
-    .footer-top #footer-img, #footer-links {
-        width: 98%;
-    }
-
-    #footer-links > div {
-        margin: 3rem auto;
-    }
+.footer-menu {
+    display: flex;
+    gap: 2rem;
 }
 
 @media (max-width: 767px) {
-    .footer-rights {
-        display: flex;
+    .footer-sections {
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .footer-rights p {
-        order: 2;
-        padding: .8rem 0 .4rem 0;
-    }
-
-    #footer-links h3 a {
-        padding: .3rem .2rem;
+        text-align: center;
     }
 }
-
-
