--- a/src/components/Pieces/Error.css
+++ b/src/components/Pieces/Error.css
@@ -25,17 +25,17 @@
     position: absolute;
     top: -1rem;
     right: 1rem;
-    border: 1px solid #495E57;
+    border: 1px solid var(--primary-color);
     border-radius: 50%;
     padding: 1.2rem;
     transition: background-color .4s;
 }
 
 #error button:hover {
-    background-color: #F4CE14;
+    background-color: var(--effect-color);
 }
 
 #error .fa-house {
     font-size: 2rem;
-    color: #495E57;
+    color: var(--effect-color);
 }
