--- a/src/components/SearchRecipe.css
+++ b/src/components/SearchRecipe.css
@@ -5,17 +5,18 @@
     background-position: center;
     background-size: cover;
     opacity: .9;
-    background-color: #f7f7f7;
+    background-color: var(--bg-dark);
 }
 
 #basic-addon1{
-    background-color: white;
+    background-color: var(--primary-color);
     border-right: none;
 }
 
 #input-s{
     border-left: none;
 }
+
 .search-input {
     position: absolute;
     top: 50%;
@@ -30,7 +31,7 @@
     margin-top: 1.55rem;
     margin-left: 1rem;
     font-size: 2.2rem;
-    color: #495E57;
+    color: var(--effect-color);
     z-index: 1;
 }
 
@@ -41,10 +42,8 @@
     border-radius: .5rem;
     font-size: 1.8rem;
     opacity: .9;
-    outline-color: #495E57;
+    outline-color: var(--effect-color);
 }
-
-
 
 @media (max-width: 1199px) {
     .search {
